Modified some code and files structure.